--- a/android/src/main/res/layout/activity_splash.xml
+++ b/android/src/main/res/layout/activity_splash.xml
@@ -20,13 +20,18 @@
     <!-- 开发者可以把自家App设计开屏图片摆放在这里，本示例中放置了一张静态图片。!-->
     <!-- 注意1：直接将此图放在广告容器的下面即可，始终不要将广告容器splash_container的设为invisible，否则将不会展示广告无法计费，返回错误码600。-->
     <!-- 注意2：建议开发者使用自己的开屏图片资源，而不是联盟的@drawable/splash_holder，资源规格可参照@drawable/splash_holder -->
-    <ImageView
-        android:id="@+id/splash_holder"
+    <RelativeLayout
+        android:id="@+id/place_holder"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/app_logo"
-        android:scaleType="fitXY"
-        />
+        android:layout_above="@id/app_logo">
+        <ImageView
+            android:id="@+id/splash_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            />
+    </RelativeLayout>
 
     <!-- 3.开屏广告容器区域：-->
     <!-- 注意：该区域高度不得小于400dp。在本示例中没有写死splash_container的高度值，是因为第1部分的app_logo区域是一个高度很小的图片。 -->
