--- a/android/src/main/res/layout/activity_splash.xml
+++ b/android/src/main/res/layout/activity_splash.xml
@@ -47,10 +47,10 @@
     <!-- 注意2：SDK除了会检查跳过按钮的可见性，还将检测它的尺寸，其尺寸不得小于3dp*3dp，否则将SDK将不展示广告，返回错误码608。 -->
     <TextView
         android:id="@+id/skip_view"
-        android:layout_width="96dp"
+        android:layout_width="66dp"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
         android:gravity="center"
         android:background="@drawable/background_circle"
